--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,25 @@
 ### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
+# 适用于 Dynamics 365 Business Central 的 AL 项目模板
+# launch.json 文件夹
 .vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
+# 缓存文件夹
+# .alcache/
+# 符号文件夹
+# .alpackages/
+# 快照文件夹
+# .snapshots/
+# 测试输出文件夹
+# .output/
+# 扩展应用文件（.app）
 *.app
-#Rapid Application Development File
+# 快速应用开发文件
 rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+# 翻译基础文件
+# *.g.xlf
+# 许可证文件
+# *.flf
+# 测试结果文件
+# TestResults.xml
+# 忽略编译好的的文件
+/bin/Debug
+/bin/Release
